--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -62,7 +62,7 @@
         {% for user in users %}
           {% if user.job == 'DG' %}
           <div class="col-lg-4 col-sm-12 col-12">
-            <img src={% static 'image/logo1.PNG' %} alt="" class="profil">
+            <img src= {% if user.profil %} {{user.profil.url}} {% else %} {% static 'image/perso.png' %} {% endif %} alt="" class="profil">
             <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Dicteur Général</p>
             {% if user.leave == False %}
@@ -80,7 +80,7 @@
         {% for user in users %}
           {% if user.job == 'DAF' %}
           <div class="col-lg-4 col-sm-6 col-12"> 
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRv9X3ouKQ82k_KS18-okhCsoaTI8JbyL6JwtHi23LpF0Xes5MyhYpb0w_YHZ41TYRr5dk&usqp=CAU" alt="" class="profil">
+            <img src={% if user.profil %} {{user.profil.url}} {% else %} {% static 'image/perso.png' %} {% endif %} class="profil">
             <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Directeur Administratif et Financier</p>
             {% if user.leave == False %}
@@ -96,7 +96,7 @@
           {% endif %}
           {% if user.job == 'DT' %}
           <div class="col-lg-4 col-sm-6 col-12"> 
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJtPL_-lNqq_qlw76VFjzu6IH4_QMpS5TBkA&usqp=CAU" alt="" class="profil">
+            <img src={% if user.profil %} {{user.profil.url}} {% else %} {% static 'image/perso.png' %} {% endif %} alt="" class="profil">
             <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Directeur Technique</p>
             {% if user.leave == False %}
@@ -118,7 +118,7 @@
           {% if user.job == 'Ingénieur' %}
           <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
             <a href="info/{{user.id}}">
-              <img src={% static 'image/perso.png' %} alt="" class="profil1">
+              <img src={% if user.profil %} {{user.profil.url}} {% else %} {% static 'image/perso.png' %} {% endif %} alt="" class="profil1">
             </a>
             <h2 class="respon">{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Ingénieur</p>
@@ -138,7 +138,7 @@
           {% if user.job == 'Technicien' %}
           <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
             <a href="info/{{user.id}}">
-              <img src={% static 'image/perso.png' %} alt="" class="profil1">
+              <img src={% if user.profil %} {{user.profil.url}} {% else %} {% static 'image/perso.png' %} {% endif %} alt="" class="profil1">
             </a>
             <h2 class="respon">{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Technicien</p>
