--- a/home/templates/home/historiqueAll.html
+++ b/home/templates/home/historiqueAll.html
@@ -1,13 +1,9 @@
 {% extends './base.html' %}
 {% load static %}
     {% block recherche %}
-    <form method="POST">
-      {% csrf_token %}
-        {{form}}
-      <input type="submit" value="Chercher">
-    </form>
-      <a href="{% url 'historique'%}all" style="background-color: #E2E4E4;text-decoration: none;color: black; padding:0.4%;margin-left: 5px ;">
-      Tout Afficher
+
+      <a href="{% url 'historique'%}" style="background-color: #E2E4E4;text-decoration: none;color: black; padding:0.4%;margin-left: 15% ;">
+      Rechercher
       </a>
     {% endblock %}
     {% block content %}
@@ -46,9 +42,7 @@
                           <td class="centre">{{ visite.possible }}</td>
                           <td class="centre">
                             {% for employe in visite.employe.all %} 
-                              <a href="{% url 'index'%}info/{{ employe.id }}">
                                 {{ employe.first_name }} {{ employe.last_name}} <br><br>
-                              </a>
                             {%  endfor %}
                           </td>
                           <td>{{ visite.comment }}</td>
@@ -81,9 +75,7 @@
                           <td class="centre">{{ installation.etat }}</td>
                           <td class="centre">
                             {% for employe in installation.employe.all %} 
-                              <a href="{% url 'index'%}info/{{ employe.id }}">
                                 {{ employe.first_name }} {{ employe.last_name}} <br><br>
-                              </a>
                             {%  endfor %}
                           </td>
                           <td>{{ installation.comment }}</td>
@@ -116,9 +108,7 @@
                           <td class="centre">{{ depannage.etat }}</td>
                           <td class="centre">
                             {% for employe in depannage.employe.all %} 
-                              <a href="{% url 'index'%}info/{{ employe.id }}">
                                 {{ employe.first_name }} {{ employe.last_name}} <br><br>
-                              </a>
                             {%  endfor %}
                           </td>
                           <td>{{ depannage.comment }}</td>
@@ -151,9 +141,7 @@
                           <td class="centre">{{ retrait.reste }}</td>
                           <td class="centre">
                             {% for employe in retrait.employe.all %} 
-                              <a href="{% url 'index'%}info/{{ employe.id }}">
                                 {{ employe.first_name }} {{ employe.last_name}} <br><br>
-                              </a>
                             {%  endfor %}
                           </td>
                           <td>{{ retrait.comment }}</td>
