--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,9 +2,9 @@
 {% load static %}
 <body style="background-color: #F1F1F1;">
 	{% block content %}
-        <br><br><br>  
+        <br><br><br><br>
         <!-- Début carousel -->
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+<!--         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,7 +51,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <!-- Début carousel -->
+        <!-- Fin carousel --> 
 
         <!-- Début équique -->
       <div class="container team">
