barre de recherche date et nom

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -33,10 +33,10 @@
 			    	        		<a class="nav-link a" href="{% url 'historique'%}">Historique</a>
 			    	      		</li>
 			    	      		<li class="nav-item">
-			    	        		<a class="nav-link a" href="{% url 'clients'%}">Clients</a>
+			    	        		<a class="nav-link a" href="{% url 'clientsAll'%}">Clients</a>
 			    	      		</li>		    	      		
 			    	      		<li class="nav-item">
-			    	        		<a class="nav-link a" href="{% url 'technique'%}">Technique</a>
+			    	        		<a class="nav-link a" href="{% url 'techniqueAll'%}">Technique</a>
 			    	      		</li>
 	<!-- 		    	      		<li class="nav-item">
 			    	        		<a class="nav-link" href="{% url 'statistique'%}">Statistique</a>
