--- a/home/templates/home/clientsAll.html
+++ b/home/templates/home/clientsAll.html
@@ -1,13 +1,9 @@
 {% extends './base.html' %}
 {% load static %}
 {% block recherche %}
-<form method="POST">
-  {% csrf_token %}
-    {{form}}
-  <input type="submit" value="Chercher">
-</form>
-  <a href="{% url 'clientsAll'%}" style="background-color: #E2E4E4;text-decoration: none;color: black; padding:0.4%;margin-left: 5px ;">
-  Tout Afficher
+
+  <a href="{% url 'clients'%}" style="background-color: #E2E4E4;text-decoration: none;color: black; padding:0.4%;margin-left: 15% ;">
+  Rechercher
   </a>
 {% endblock %}
 {% block body %}
