--- a/home/templates/home/historiqueAll.html
+++ b/home/templates/home/historiqueAll.html
@@ -5,6 +5,9 @@
       <a href="{% url 'historique'%}" style="background-color: #E2E4E4;text-decoration: none;color: black; padding:0.4%;margin-left: 15% ;">
       Rechercher
       </a>
+      <a href="{% url 'index'%}info/0" style="background-color: #E2E4E4;text-decoration: none;color: black; padding:0.4%;margin-left: 15% ;">
+      Employe
+      </a>
     {% endblock %}
     {% block content %}
     <style type="text/css">
