--- a/home/templates/home/infoActEmploy.html
+++ b/home/templates/home/infoActEmploy.html
@@ -32,7 +32,7 @@
               <div>
 
                 <div class="row g-3" style="margin-left: 3px ;">
-                  <div class="col">
+                  <div class="col-lg-3 col-12">
                     <div class="card shadow-sm">
                       <svg class="bd-placeholder-img card-img-top" width="100%" height="80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#060452"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visites de site<span class="badge bleu">{{nbr_visite}}</span></text></svg>
                       <div class="card-body">
@@ -45,7 +45,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-lg-3 col-12">
                     <div class="card shadow-sm">
                       <svg class="bd-placeholder-img card-img-top" width="100%" height="80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#008523"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Installations<span class="badge vert">{{nbr_installation}}</span></text></svg>
                       <div class="card-body">
@@ -72,7 +72,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-lg-3 col-12">
                     <div class="card shadow-sm">
                       <svg class="bd-placeholder-img card-img-top" width="100%" height="80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="orange"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dépannages<span class="badge orange">{{nbr_depannage}}</span></text></svg>
                       <div class="card-body">
@@ -99,7 +99,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-lg-3 col-12">
                     <div class="card shadow-sm">
                       <svg class="bd-placeholder-img card-img-top" width="100%" height="80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retraits<span class="badge rouge">{{nbr_retrait}}</span></text></svg>
                       <div class="card-body">
